added some changes